prevented navbar from overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+body{
+  overflow-x: hidden !important;
+}
 .movie_poster__scrollbar::-webkit-scrollbar {
   display: none;
 }
